adding skill and project section

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <!-- css -->
     <link rel="stylesheet" href="style.css">
     <!-- font awesome -->
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -18,7 +17,7 @@
     <!-- dark mode toggler -->
     <input type="checkbox" id="darkmode">
     <div class="wrapper">
-        <label for="darkmode"><i class="fa-solid fa-circle-half-stroke"></i></label>
+        <label for="darkmode"><i class="fa-solid fa-circle-half-stroke" style="color: pink;"></i></label>
         <!-- navbar -->
         <nav>
             <div class="navbar container flex">
@@ -47,10 +46,130 @@
                 </div>
             </div>
             <div class="right flex">
-                <img src="./assets/sahil.png" alt="sahil image">
+                <img src="./assets/sahil.png" alt="sahil image" width="400px" height="450px">
             </div>
         </section>
-        
+
+        <!-- banner section -->
+        <section class="banner container flex">
+            <div class="flex info-content">
+                <div class="icon flex-center"><i class="fa-solid fa-award"></i></div>
+                <div class="content">
+                    <span>IT</span>
+                    <p>Runing</p>
+                </div>
+            </div>
+            <div class="horizontal_line"></div>
+
+            <div class="flex info-content">
+                <div class="icon flex-center"><i class="fa-solid fa-award"></i></div>
+                <div class="content">
+                    <span>4+ Project</span>
+                    <p>Completed</p>
+                </div>
+            </div>
+            <div class="horizontal_line"></div>
+
+            <div class="flex info-content">
+                <div class="icon flex-center"><i class="fa-solid fa-award"></i></div>
+                <div class="content">
+                    <span>1+ year</span>
+                    <p>Experience</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- skill section -->
+        <section class="skill">
+            <h2 class="title">
+                <span>Skills</span>
+            </h2>
+            <div class="skill-container container flex">
+                <div>
+                    <i class="fa-brands fa-html5" style="color:rgb(255, 0, 0);"></i>
+                    <span>HTML</span>
+                </div>
+                <div>
+                    <i class="fa-brands fa-css3-alt" style="color: blue;"></i>
+                    <span>CSS</span>
+                </div>
+                <div>
+                    <i class="fa-brands fa-js" style="color: rgb(184, 170, 11);"></i>
+                    <span>JavaScript</span>
+                </div>
+                <div>
+                    <i class="fa-brands fa-github"></i>
+                    <span>Git Hub</span>
+                </div>
+                <div>
+                    <i class="fa-brands fa-python" ></i>
+                    <span>python</span>
+                </div>
+            </div>
+        </section>
+
+        <!-- project container section -->
+         <section class="project container">
+            <h2 class="title">
+                <span>My Projects</span>
+            </h2>
+            <div class="project-container grid">
+                <div>
+                    <div class="top">
+                        <img src="./assets/portfolio_a.png" alt="" width="500px"height="400px">
+                    </div>
+                    <div class="bottom">
+                        <i class="fa-brands fa-github"></i>
+                        <div class="container project-name">
+                           <h3>Personal Portfolio</h3>
+                           <p>Tech Stack : HTML, CSS</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="top">
+                        <img src="./assets/portfolio_a.png" alt="" width="500px"height="400px">
+                    </div>
+                    <div class="bottom">
+                        <i class="fa-brands fa-github"></i>
+                        <div class="container project-name">
+                           <h3>Personal Portfolio</h3>
+                           <p>Tech Stack : HTML, CSS</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="top">
+                        <img src="./assets/portfolio_a.png" alt="" width="500px"height="400px">
+                    </div>
+                    <div class="bottom">
+                        <i class="fa-brands fa-github"></i>
+                        <div class="container project-name">
+                           <h3>Personal Portfolio</h3>
+                           <p>Tech Stack : HTML, CSS</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="top">
+                        <img src="./assets/portfolio_a.png" alt="" width="500px"height="400px">
+                    </div>
+                    <div class="bottom">
+                        <i class="fa-brands fa-github"></i>
+                        <div class="container project-name">
+                           <h3>Personal Portfolio</h3>
+                           <p>Tech Stack : HTML, CSS</p>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+         </section>
+        <!-- footer -->
+        <footer></footer>
     </div>
 
 </body>
