making the portfolio responsive

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                     <div>Sahil</div>
                     <div class="line">Full Stack Developer</div>
                 </div>
+                <!-- hamburger -->
+                <label for="hamburgerMenu"><i class="fa-solid fa-bars" style="color: black;"></i></label>
+                <input type="checkbox" name="" id="hamburgerMenu">
                 <div class="menu ">
                     <ul class="flex nav-item">
                         <li><a href="#hero">Home</a></li>
@@ -133,7 +136,20 @@
 
                 <div>
                     <div class="top">
-                        <img src="./assets/portfolio_a.png" alt="" width="500px" height="400px">
+                        <img src="./assets/portfolio_b.png" alt="" width="500px" height="400px">
+                    </div>
+                    <div class="bottom">
+                        <i class="fa-brands fa-github"></i>
+                        <div class="container project-name">
+                            <h3>Personal Portfolio</h3>
+                            <p>Tech Stack : HTML, CSS</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- <div>
+                    <div class="top">
+                        <img src="./assets/portfolio_b.png" alt="" width="500px" height="400px">
                     </div>
                     <div class="bottom">
                         <i class="fa-brands fa-github"></i>
@@ -155,20 +171,7 @@
                             <p>Tech Stack : HTML, CSS</p>
                         </div>
                     </div>
-                </div>
-
-                <div>
-                    <div class="top">
-                        <img src="./assets/portfolio_a.png" alt="" width="500px" height="400px">
-                    </div>
-                    <div class="bottom">
-                        <i class="fa-brands fa-github"></i>
-                        <div class="container project-name">
-                            <h3>Personal Portfolio</h3>
-                            <p>Tech Stack : HTML, CSS</p>
-                        </div>
-                    </div>
-                </div>
+                </div> -->
 
             </div>
         </section>
